[tool.poetry]
name = "mcs-modpack-installer"
version = "0.1.0"
description = ""
authors = ["Alex Corazza <alex.corazza@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
